tdf#126254 Help - About is black with Linux gen and gtk2

Change-Id: If18693e1cb8a92a7a152dd9decc892fc5f2b7ab5